add_subdirectory (mocks)
link_directories (lib/ /usr/local/lib)

include_directories (SYSTEM /usr/local/include/)

set (CMAKE_BUILD_TYPE "Debug")
set (CMAKE_VERBOSE_MAKEFILE ON)

add_executable (mock_socket_connector_TEST mock_socket_connector_TEST.c)
add_executable (connections_TEST connections_TEST.c)
add_executable (shared_buffers_TEST_test shared_buffers_TEST.c)
add_executable (socket_connector_TEST_test socket_connector_TEST.c)
add_executable (route_instance_TEST_test route_instance_TEST.c)
add_executable (http_headers_TEST_test http_headers_TEST.c)
add_executable (http_message_TEST_test http_message_TEST.c)
add_executable (http_first_line_TEST_test http_first_line_TEST.c)

target_link_libraries (mock_socket_connector_TEST stack mock_socket_connector ${CRITERION_LIBRARIES})
target_link_libraries (connections_TEST gateway stack mock_buffers mock_socket mock_socket_connector http pthread m ${CRITERION_LIBRARIES})
target_link_libraries (shared_buffers_TEST_test gateway buffers http pthread m ${CRITERION_LIBRARIES})
target_link_libraries (socket_connector_TEST_test gateway buffers stack mock_socket mock_buffers http pthread m ${CRITERION_LIBRARIES})
target_link_libraries (route_instance_TEST_test gateway buffers  http pthread m ${CRITERION_LIBRARIES})
target_link_libraries (http_headers_TEST_test mock_buffers gateway buffers stack http socket_conn pthread m ${CRITERION_LIBRARIES})
target_link_libraries (http_first_line_TEST_test mock_buffers gateway  http pthread m ${CRITERION_LIBRARIES})
target_link_libraries (http_message_TEST_test mock_socket_connector gateway http stack pthread m ${CRITERION_LIBRARIES})

set_property (TARGET mock_socket_connector_TEST PROPERTY C_STANDARD 99)
set_property (TARGET connections_TEST PROPERTY C_STANDARD 99)
set_property (TARGET shared_buffers_TEST_test PROPERTY C_STANDARD 99)
set_property (TARGET socket_connector_TEST_test PROPERTY C_STANDARD 99)
set_property (TARGET route_instance_TEST_test PROPERTY C_STANDARD 99)
set_property (TARGET http_headers_TEST_test PROPERTY C_STANDARD 99)
set_property (TARGET http_message_TEST_test PROPERTY C_STANDARD 99)
set_property (TARGET http_first_line_TEST_test PROPERTY C_STANDARD 99)

add_test (mock_socket_connector_TEST bin/mock_socket_connector_TEST)
add_test (connections_TEST bin/connections_TEST)
add_test (shared_buffers_TEST_test bin/shared_buffers_TEST_test)
add_test (socket_connector_TEST_test bin/socket_connector_TEST_test)
add_test (route_instance_TEST_test bin/route_instance_TEST_test)
add_test (http_headers_TEST_test bin/http_headers_TEST_test)
add_test (http_message_TEST_test bin/http_message_TEST_test)
add_test (http_first_line_TEST_test bin/http_first_line_TEST_test)
